--- a/ebproof.sty
+++ b/ebproof.sty
@@ -9,41 +9,13 @@
 \RequirePackage{pgfkeys}
 \RequirePackage{ifthen}
 
-%%% Registers
+%%% Registers and internal parameters
 
 \newbox\ebproof@leftbox
 \newbox\ebproof@rightbox
-\newif\ifebproof@updown
-\newif\ifebproof@center
+\newif\ifebproof@updown \ebproof@updownfalse
+\newif\ifebproof@center \ebproof@centertrue
 
-%%% Parameters
-
-\def\ebproofset#1{\pgfqkeys{/ebproof}{#1}}
-
-\ebproofset{
-hsep/.initial=1.5em,
-labelsep/.initial=0.5em,
-rulemargin/.initial=.7ex,
-thickness/.initial=.4pt,
-rule code/.initial=,
-updown/.is if=ebproof@updown,
-template/.code={\def\ebproof@template##1{#1}},
-lefttemplate/.code={\def\ebproof@lefttemplate##1{#1}},
-righttemplate/.code={\def\ebproof@righttemplate##1{#1}},
-leftlabeltemplate/.code={\def\ebproof@leftlabeltemplate##1{#1}},
-rightlabeltemplate/.code={\def\ebproof@rightlabeltemplate##1{#1}},
-leftlabel/.code={%
-  \def\ebproof@setleftlabel{%
-    \setbox\ebproof@leftbox=\hbox{\ebproof@leftlabeltemplate{#1}}}},
-rightlabel/.code={%
-  \def\ebproof@setrightlabel{%
-    \setbox\ebproof@rightbox=\hbox{\ebproof@rightlabeltemplate{#1}}}},
-center/.is if=ebproof@center
-}
-
-% Default values:
-
-\ebproof@updownfalse
 \def\ebproof@template#1{$#1$}
 \def\ebproof@lefttemplate#1{$#1\mathrel{}$}
 \def\ebproof@righttemplate#1{$\mathrel{}#1$}
@@ -51,7 +23,87 @@ center/.is if=ebproof@center
 \def\ebproof@rightlabeltemplate#1{#1}
 \def\ebproof@setleftlabel{\setbox\ebproof@leftbox=\box\voidb@x}
 \def\ebproof@setrightlabel{\setbox\ebproof@rightbox=\box\voidb@x}
-\ebproof@centertrue
+
+%%% Parameters
+
+\def\ebproofset#1{\pgfqkeys{/ebproof}{#1}}
+
+\ebproofset{
+%
+% general shape
+%
+center/.is if=ebproof@center,
+proof style/.is choice,
+proof style/upwards/.code={\ebproof@updownfalse},
+proof style/downwards/.code={\ebproof@updowntrue},
+%
+% spacing
+%
+separation/.initial=1.5em,
+rule margin/.initial=.7ex,
+%
+% shape of inference lines
+%
+rule thickness/.initial=.4pt,
+rule separation/.initial=2pt,
+rule dash length/.initial=.2em,
+rule dash space/.initial=.3em,
+rule code/.initial=,
+%
+% templates
+%
+template/.code={\def\ebproof@template##1{#1}},
+left template/.code={\def\ebproof@lefttemplate##1{#1}},
+right template/.code={\def\ebproof@righttemplate##1{#1}},
+%
+% labels
+%
+left label/.code={%
+  \def\ebproof@setleftlabel{%
+    \setbox\ebproof@leftbox=\hbox{\ebproof@leftlabeltemplate{#1}}}},
+right label/.code={%
+  \def\ebproof@setrightlabel{%
+    \setbox\ebproof@rightbox=\hbox{\ebproof@rightlabeltemplate{#1}}}},
+left label template/.code={\def\ebproof@leftlabeltemplate##1{#1}},
+right label template/.code={\def\ebproof@rightlabeltemplate##1{#1}},
+label separation/.initial=0.5em,
+}
+
+% Rule styles
+
+\pgfqkeys{/ebproof/rule style}{
+.is choice,
+.search also=/ebproof,
+simple/.style={/ebproof/rule code={%
+  \hrule height \pgfkeysvalueof{/ebproof/rule thickness}\relax
+  }},
+%
+no rule/.style={/ebproof/rule code=},
+%
+double/.style={/ebproof/rule code={%
+  \hrule height \pgfkeysvalueof{/ebproof/rule thickness}
+  \kern\pgfkeysvalueof{/ebproof/rule separation}%
+  \hrule height \pgfkeysvalueof{/ebproof/rule thickness}
+  }},
+%
+dashed/.style={/ebproof/rule code={%
+  \hbox to \hsize{%
+    \@tempdima=\pgfkeysvalueof{/ebproof/rule dash space}%
+    \divide\@tempdima2%
+    \kern-\@tempdima%
+    \cleaders\hbox{%
+      \kern\@tempdima%
+      \vrule
+        height \pgfkeysvalueof{/ebproof/rule thickness}
+        width \pgfkeysvalueof{/ebproof/rule dash length}%
+      \kern\@tempdima
+    }\hfill
+    \kern-\@tempdima
+    }%
+  }},
+%
+simple % use the 'simple' rule style by default
+}
 
 %%% Storage
 
@@ -182,7 +234,7 @@ center/.is if=ebproof@center
   \ebproof@pop{B}%
   \ebproof@alloc{C}=\hbox{%
     \box\B@box
-    \kern\pgfkeysvalueof{/ebproof/hsep}%
+    \kern\pgfkeysvalueof{/ebproof/separation}%
     \box\A@box}%
   \C@left=\B@left
   \C@right=\A@right
@@ -222,12 +274,12 @@ center/.is if=ebproof@center
   \ebproof@pop{B}%
   \ebproof@alloc{C}=\hbox{%
     \box\B@box
-    \kern\pgfkeysvalueof{/ebproof/hsep}%
+    \kern\pgfkeysvalueof{/ebproof/separation}%
     \copy\A@box}%
   \C@left=\B@left
   \C@right=\B@right
   \advance\C@right\wd\A@box
-  \advance\C@right\pgfkeysvalueof{/ebproof/hsep}
+  \advance\C@right\pgfkeysvalueof{/ebproof/separation}%
   \ebproof@push{C}%
   \endgroup}
 
@@ -301,18 +353,18 @@ center/.is if=ebproof@center
   \ebproof@localbox{R@box}=\vbox{%
     \hsize=\R@width
     \hrule width \R@width height 0pt\relax
-    \kern\pgfkeysvalueof{/ebproof/rulemargin}%
+    \kern\pgfkeysvalueof{/ebproof/rule margin}%
     \pgfkeysgetvalue{/ebproof/rule code}{\@rulecode}%
     \ifx\@rulecode\@empty\else
       \@rulecode
       \unskip% so that only one margin is inserted if no rule is drawn
-      \kern\pgfkeysvalueof{/ebproof/rulemargin}%
+      \kern\pgfkeysvalueof{/ebproof/rule margin}%
     \fi
   }%
   % Shift things if the left box is wider than |\R@shift|
   \ifvoid\ebproof@leftbox\else
     \tmp=\wd\ebproof@leftbox
-    \advance\tmp\pgfkeysvalueof{/ebproof/labelsep}
+    \advance\tmp\pgfkeysvalueof{/ebproof/label separation}
     \ifdim\tmp>\R@shift
       \advance\tmp-\R@shift
       \advance\A@shift\tmp
@@ -333,11 +385,11 @@ center/.is if=ebproof@center
   \setbox\RC@box=\hbox{%
     \ifvoid\ebproof@leftbox\else
       \copy\ebproof@leftbox
-      \kern\pgfkeysvalueof{/ebproof/labelsep}
+      \kern\pgfkeysvalueof{/ebproof/label separation}
     \fi
     \box\RC@box
     \ifvoid\ebproof@rightbox\else
-      \kern\pgfkeysvalueof{/ebproof/labelsep}
+      \kern\pgfkeysvalueof{/ebproof/label separation}
       \copy\ebproof@rightbox
     \fi}
   % Adapt the dimensions on the right if the total rule width is too large
@@ -369,38 +421,6 @@ center/.is if=ebproof@center
   \fi
   \ebproof@push{C}%
   \endgroup}
-
-\ebproofset{
-none/.style={rule code=},
-simple/.style={rule code={%
-  \hrule height \pgfkeysvalueof{/ebproof/thickness}\relax
-  }},
-double/sep/.initial=2pt,
-double/.style={rule code={%
-  \hrule height \pgfkeysvalueof{/ebproof/thickness}
-  \kern\pgfkeysvalueof{/ebproof/double/sep}%
-  \hrule height \pgfkeysvalueof{/ebproof/thickness}
-  }},
-dashed/on/.initial=.2em,
-dashed/off/.initial=.2em,
-dashed/.style={rule code={%
-  \hbox to \hsize{%
-    \@tempdima=\pgfkeysvalueof{/ebproof/dashed/off}%
-    \divide\@tempdima2%
-    \kern-\@tempdima%
-    \cleaders\hbox{%
-      \kern\@tempdima%
-      \vrule
-        height \pgfkeysvalueof{/ebproof/thickness}
-        width \pgfkeysvalueof{/ebproof/dashed/on}%
-      \kern\@tempdima
-    }\hfill
-    \kern-\@tempdima
-    }%
-  }},
-}
-
-\ebproofset{simple}
 
 %%% Modifying boxes
 
@@ -458,10 +478,10 @@ dashed/.style={rule code={%
 \def\ebproof@infer@[#1]#2{%
   \@ifnextchar[{\ebproof@infer@@{#1}{#2}}{\ebproof@infer@@{#1}{#2}[]}}
 \def\ebproof@infer@@#1#2[#3]#4{{%
-  \ebproofset{#1}%
+  \pgfqkeys{/ebproof/rule style}{.search also=/ebproof,#1}%
   \ebproof@joinh@multi{#2}%
   \ebproof@hypo{#4}%
-  \ifthenelse{\equal{#3}{}}{}{\ebproofset{rightlabel={#3}}}%
+  \ifthenelse{\equal{#3}{}}{}{\ebproofset{right label={#3}}}%
   \ebproof@joinv}}
 
 % Ellipsis with vertical dots
@@ -503,14 +523,14 @@ dashed/.style={rule code={%
   \global\setbox\ebproof@box@temp=\box1}
 
 \newenvironment{prooftree}[1][]{%
-  \ebproofset{#1}%
+  \pgfqkeys{/ebproof/proof style}{.search also=/ebproof,#1}%
   \leavevmode\ebproof@begin
 }{%
   \ebproof@end}
 
 \newenvironment{prooftree*}[1][]{%
   \center
-  \ebproofset{#1}%
+  \pgfqkeys{/ebproof/proof style}{.search also=/ebproof,#1}%
   \leavevmode\ebproof@begin
 }{%
   \ebproof@end
