--- a/ebproof.sty
+++ b/ebproof.sty
@@ -1,7 +1,7 @@
 % This package contains macros for typesetting proof trees.
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{ebproof}[2015/01/27 EB's proof trees]
+\ProvidesPackage{ebproof}[2015/02/03 v1.0 EB's proof trees]
 
 % The |pgfkeys| package is used for the parameters in proof construction.
 % The |ifthen| package is used for some tests.
