--- a/ebproof.tex
+++ b/ebproof.tex
@@ -4,6 +4,7 @@
 
 \title{The \package{ebproof} package}
 \author{Emmanuel Beffara \\ \url{manu@beffara.org}}
+\date{Version 1.0 \\ February 3, 2015}
 
 \usepackage{amssymb}
 \usepackage{color}
