--- a/README
+++ b/README
@@ -1,5 +1,34 @@
+== Presentation ==
+
 The ebproofs package provides commands to typeset proof trees, in the style of
 sequent calculus and related systems. The commands allow for writing
 inferences with any number of premisses and alignment of successive formulas
 on an arbitrary point. Various options allow complete control over spacing,
 styles of inference rules, placement of labels, etc.
+
+The distribution includes the following files:
+
+ - ebproof.sty : the package
+ - ebproof.pdf : the documentation
+ - ebproof.tex : the LaTeX source for the documentation
+
+The package requires pgfkeys (from TikZ/PGF) for the option system.
+
+
+== License ==
+
+Copyright 2015 Emmanuel Beffara <manu@beffara.org>
+
+This work may be distributed and/or modified under the
+conditions of the LaTeX Project Public License, either version 1.3
+of this license or (at your option) any later version.
+The latest version of this license is in
+  http://www.latex-project.org/lppl.txt
+and version 1.3 or later is part of all distributions of LaTeX
+version 2005/12/01 or later.
+
+This work has the LPPL maintenance status `maintained'.
+
+The Current Maintainer of this work is Emmanuel Beffara.
+
+This work consists of the files ebproof.sty and ebproof.tex.
