--- a/ebproof.sty
+++ b/ebproof.sty
@@ -1,7 +1,24 @@
-% This package contains macros for typesetting proof trees.
+% The ebproof package - Formal proofs in the style of sequent calculus
+
+%% ebproof.sty
+%% Copyright 2015 Emmanuel Beffara <manu@beffara.org>
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either version 1.3
+% of this license or (at your option) any later version.
+% The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3 or later is part of all distributions of LaTeX
+% version 2005/12/01 or later.
+%
+% This work has the LPPL maintenance status `maintained'.
+%
+% The Current Maintainer of this work is Emmanuel Beffara.
+%
+% This work consists of the files ebproof.sty and ebproof.tex.
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{ebproof}[2015/02/03 v1.0 EB's proof trees]
+\ProvidesPackage{ebproof}[2015/03/13 v1.1 EB's proof trees]
 
 % The |pgfkeys| package is used for the parameters in proof construction.
 
