--- a/ebproof.tex
+++ b/ebproof.tex
@@ -1,10 +1,27 @@
+%% ebproof.sty
+%% Copyright 2015 Emmanuel Beffara <manu@beffara.org>
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either version 1.3
+% of this license or (at your option) any later version.
+% The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3 or later is part of all distributions of LaTeX
+% version 2005/12/01 or later.
+%
+% This work has the LPPL maintenance status `maintained'.
+%
+% The Current Maintainer of this work is Emmanuel Beffara.
+%
+% This work consists of the files ebproof.sty and ebproof.tex.
+
 \documentclass{article}
 
 \DeclareRobustCommand\package[1]{\texttt{#1}}
 
 \title{The \package{ebproof} package}
 \author{Emmanuel Beffara \\ \url{manu@beffara.org}}
-\date{Version 1.0 \\ February 3, 2015}
+\date{Version 1.1 \\ March 13, 2015}
 
 \usepackage{amssymb}
 \usepackage{color}
@@ -492,5 +509,23 @@ following command:
   The default value is \lit{0.5em}.
 \end{csdoc}
 
+
+\section{License}
+
+This work may be distributed and/or modified under the
+conditions of the \LaTeX\ Project Public License, either version 1.3
+of this license or (at your option) any later version.
+The latest version of this license is in
+\begin{center}
+  \url{http://www.latex-project.org/lppl.txt}
+\end{center}
+and version 1.3 or later is part of all distributions of \LaTeX\
+version 2005/12/01 or later.
+
+This work has the LPPL maintenance status `maintained'.
+
+The Current Maintainer of this work is Emmanuel Beffara.
+
+This work consists of the files \texttt{ebproof.sty} and \texttt{ebproof.tex}.
 
 \end{document}
