--- a/ebproof.sty
+++ b/ebproof.sty
@@ -121,6 +121,35 @@ simple % use the 'simple' rule style by default
 %           of the conclusion
 %
 % TeX does not actually provide data structures, so we have to encode things.
+% We provide an allocator for "registers" holding boxes with attributes. Such
+% a register consists in a box register and a a dimension register for each of
+% the above dimensions. The dimensions of register \x are accessed using
+% \ebproof@left\x etc.
+
+\def\ebproof@left#1{\csname ebproof@left@\the#1\endcsname}
+\def\ebproof@right#1{\csname ebproof@right@\the#1\endcsname}
+\def\ebproof@axis#1{\csname ebproof@axis@\the#1\endcsname}
+
+\def\ebproof@newtree#1{%
+  \newbox#1%
+  \expandafter\expandafter\expandafter\newdimen\ebproof@left#1%
+  \expandafter\expandafter\expandafter\newdimen\ebproof@right#1%
+  \expandafter\expandafter\expandafter\newdimen\ebproof@axis#1%
+}
+
+\ebproof@newtree\ebproof@A
+\ebproof@newtree\ebproof@B
+\ebproof@newtree\ebproof@C
+
+% Clear a tree register.
+
+\def\ebproof@cleartree#1{%
+  \setbox#1=\box\voidb@x
+  \ebproof@left#1=0pt%
+  \ebproof@right#1=0pt%
+  \ebproof@axis#1=0pt%
+\relax}
+
 % First we provide local allocators, for temporary allocation of registers in
 % a group. Dimensions are initialized to 0pt, boxes are uninitialized.
 
@@ -132,16 +161,6 @@ simple % use the 'simple' rule style by default
 \def\ebproof@localbox#1{%
   \advance\count14\@ne% \count14 is the number of the last allocated \box
   \expandafter\chardef\csname#1\endcsname\count14}
-
-% From this we deduce an allocator for data structures. This allocator
-% receives a base name |A| and defines the registers |\A@box|, |\A@left|,
-% |\A@right| and |\A@axis|.
-
-\def\ebproof@alloc#1{%
-  \ebproof@localdimen{#1@left}%
-  \ebproof@localdimen{#1@right}%
-  \ebproof@localdimen{#1@axis}%
-  \ebproof@localbox{#1@box}}
 
 % Logically, such structures are stored on a stack. However, TeX does not
 % provide data structures, so we encode them using what we actually have. A
@@ -159,24 +178,24 @@ simple % use the 'simple' rule style by default
 
 % Clear the stack.
 
-\def\ebproof@clear{%
+\def\ebproof@clearstack{%
   \global\ebproof@level=0%
   \global\setbox\ebproof@box@stack=\box\voidb@x%
   \gdef\ebproof@stack{}}
 
-% Push an allocated structure (by name) on the stack.
+% Push the contents of a register on the stack.
 
 \def\ebproof@push#1{%
   \global\advance\ebproof@level1\relax
   \global\setbox\ebproof@box@stack=\hbox{%
-    \unhbox\ebproof@box@stack\copy\csname#1@box\endcsname}%
+    \unhbox\ebproof@box@stack\copy#1}%
   \xdef\ebproof@stack{%
-    {\the\csname#1@left\endcsname}%
-    {\the\csname#1@right\endcsname}%
-    {\the\csname#1@axis\endcsname}%
+    {\the\ebproof@left#1}%
+    {\the\ebproof@right#1}%
+    {\the\ebproof@axis#1}%
     {\ebproof@stack}}}
 
-% Allocate a structure and pop its value from the top of the stack.
+% Pop the value from the top of the stack into a register.
 
 \def\ebproof@pop#1{%
   \ifnum\ebproof@level>0\relax
@@ -184,63 +203,57 @@ simple % use the 'simple' rule style by default
     \global\setbox\ebproof@box@stack=\hbox{%
       \unhbox\ebproof@box@stack
       \global\setbox\ebproof@box@temp=\lastbox}%
-    \ebproof@alloc{#1}%
-    \expandafter\setbox\csname#1@box\endcsname=\box\ebproof@box@temp%
-    \begingroup\def\pop##1##2##3##4{\endgroup%
-      \csname#1@left\endcsname=##1\relax
-      \csname#1@right\endcsname=##2\relax
-      \csname#1@axis\endcsname=##3\relax
+    \setbox#1=\box\ebproof@box@temp
+    \begingroup\def\pop##1##2##3##4{\endgroup
+      \ebproof@left#1=##1\relax
+      \ebproof@right#1=##2\relax
+      \ebproof@axis#1=##3\relax
       \gdef\ebproof@stack{##4}}%
     \expandafter\pop\ebproof@stack
   \else
     \PackageError{ebproof}{%
       Missing premiss in a proof tree}{}%
-    \ebproof@alloc{#1}%
-    \expandafter\setbox\csname#1@box\endcsname=\box\voidb@x
+    \ebproof@cleartree#1%
   \fi}
 
 
 %%% Making boxes
 
-% Push a box with the axis in the middle.
+% Make a box with the axis in the middle.
 
-\def\ebproof@pushsimple#1{%
-  \begingroup
-  \ebproof@alloc{A}%
-  \setbox\A@box=\hbox{#1}%
-  \A@axis=.5\wd\A@box
-  \ebproof@push{A}%
-  \endgroup}
+\def\ebproof@setsimple#1#2{%
+  \ebproof@cleartree#1%
+  \setbox#1=\hbox{#2}%
+  \ebproof@axis#1=.5\wd#1%
+}
 
 % Push a box made of two halves, with the axis between the halves.
 
-\def\ebproof@pushsplit#1#2{%
-  \begingroup
-  \ebproof@alloc{A}%
-  \setbox\A@box=\hbox{#1}%
-  \A@axis=\wd\A@box
-  \setbox\A@box=\hbox{\unhbox\A@box#2}%
-  \ebproof@push{A}%
-  \endgroup}
+\def\ebproof@setsplit#1#2#3{%
+  \ebproof@cleartree#1%
+  \setbox#1=\hbox{#2}%
+  \ebproof@axis#1=\wd#1%
+  \setbox#1=\hbox{\unhbox#1#3}%
+}
 
 % Join horizontally the two elements at the top of the stack.
 
 \def\ebproof@joinh{%
   \begingroup
-  \ebproof@pop{A}%
-  \ebproof@pop{B}%
-  \ebproof@alloc{C}%
-  \setbox\C@box=\hbox{%
-    \box\B@box
+  \ebproof@pop\ebproof@A%
+  \ebproof@pop\ebproof@B%
+  \ebproof@cleartree\ebproof@C%
+  \setbox\ebproof@C=\hbox{%
+    \box\ebproof@B
     \kern\pgfkeysvalueof{/ebproof/separation}%
-    \box\A@box}%
-  \C@left=\B@left
-  \C@right=\A@right
-  \C@axis=\wd\C@box
-  \advance\C@axis\B@left
-  \advance\C@axis-\A@right
-  \divide\C@axis2\relax
-  \ebproof@push{C}%
+    \box\ebproof@A}%
+  \ebproof@left\ebproof@C=\ebproof@left\ebproof@B
+  \ebproof@right\ebproof@C=\ebproof@right\ebproof@A
+  \ebproof@axis\ebproof@C=\wd\ebproof@C
+  \advance\ebproof@axis\ebproof@C\ebproof@left\ebproof@B
+  \advance\ebproof@axis\ebproof@C-\ebproof@right\ebproof@A
+  \divide\ebproof@axis\ebproof@C2\relax
+  \ebproof@push\ebproof@C%
   \endgroup}
 
 % An $n$-ary version of the horizontal join.
@@ -250,9 +263,9 @@ simple % use the 'simple' rule style by default
   \countdef\c=1
   \c=#1\relax%
   \ifnum\c=0
-    \ebproof@alloc{X}%
-    \setbox\X@box=\hbox{}%
-    \ebproof@push{X}%
+    \ebproof@cleartree\ebproof@A%
+    \setbox\ebproof@A=\hbox{}%
+    \ebproof@push\ebproof@A%
   \else
     \ebproof@joinh@loop
   \fi
@@ -269,18 +282,18 @@ simple % use the 'simple' rule style by default
 
 \def\ebproof@joinright{%
   \begingroup
-  \ebproof@pop{A}%
-  \ebproof@pop{B}%
-  \ebproof@alloc{C}%
-  \setbox\C@box=\hbox{%
-    \box\B@box
+  \ebproof@pop\ebproof@A%
+  \ebproof@pop\ebproof@B%
+  \ebproof@cleartree\ebproof@C%
+  \setbox\ebproof@C=\hbox{%
+    \box\ebproof@B
     \kern\pgfkeysvalueof{/ebproof/separation}%
-    \copy\A@box}%
-  \C@left=\B@left
-  \C@right=\B@right
-  \advance\C@right\wd\A@box
-  \advance\C@right\pgfkeysvalueof{/ebproof/separation}%
-  \ebproof@push{C}%
+    \copy\ebproof@A}%
+  \ebproof@left\ebproof@C=\ebproof@left\ebproof@B
+  \ebproof@right\ebproof@C=\ebproof@right\ebproof@B
+  \advance\ebproof@right\ebproof@C\wd\ebproof@A
+  \advance\ebproof@right\ebproof@C\pgfkeysvalueof{/ebproof/separation}%
+  \ebproof@push\ebproof@C%
   \endgroup}
 
 % Join vertically the two elements at the top of the stack, with a horizontal
@@ -288,11 +301,9 @@ simple % use the 'simple' rule style by default
 
 \def\ebproof@joinv{%
   \begingroup
-  \ebproof@pop{A}%
-  \ebproof@pop{B}%
-  %
-  \ebproof@alloc{C}%
-  \setbox\C@box=\box\voidb@x%
+  \ebproof@pop\ebproof@A%
+  \ebproof@pop\ebproof@B%
+  \ebproof@cleartree\ebproof@C%
   \ebproof@localdimen{A@shift}%
   \ebproof@localdimen{B@shift}%
   \ebproof@localdimen{R@shift}%
@@ -302,48 +313,48 @@ simple % use the 'simple' rule style by default
   \ebproof@localdimen{tmp}%
   %
   % The placement of the boxes and the axis of the result
-  \ifdim\A@axis>\B@axis
+  \ifdim\ebproof@axis\ebproof@A>\ebproof@axis\ebproof@B
     \A@shift=0pt%
-    \B@shift=\A@axis
-    \advance\B@shift-\B@axis
-    \C@axis=\A@axis
+    \B@shift=\ebproof@axis\ebproof@A
+    \advance\B@shift-\ebproof@axis\ebproof@B
+    \ebproof@axis\ebproof@C=\ebproof@axis\ebproof@A
   \else
-    \A@shift=\B@axis
-    \advance\A@shift-\A@axis
+    \A@shift=\ebproof@axis\ebproof@B
+    \advance\A@shift-\ebproof@axis\ebproof@A
     \B@shift=0pt%
-    \C@axis=\B@axis
+    \ebproof@axis\ebproof@C=\ebproof@axis\ebproof@B
   \fi
   % The paddings of the result
-  \C@left=\A@left
-  \advance\C@left\A@shift
-  \C@right=\A@right
-  \tmp=\wd\B@box
+  \ebproof@left\ebproof@C=\ebproof@left\ebproof@A
+  \advance\ebproof@left\ebproof@C\A@shift
+  \ebproof@right\ebproof@C=\ebproof@right\ebproof@A
+  \tmp=\wd\ebproof@B
   \advance\tmp\B@shift
-  \advance\tmp-\wd\A@box
+  \advance\tmp-\wd\ebproof@A
   \advance\tmp-\A@shift
   \ifdim\tmp>0pt%
-    \C@width=\wd\B@box
+    \C@width=\wd\ebproof@B
     \advance\C@width\B@shift
-    \advance\C@right\tmp
+    \advance\ebproof@right\ebproof@C\tmp
   \else
-    \C@width=\wd\A@box
+    \C@width=\wd\ebproof@A
     \advance\C@width\A@shift
   \fi
   % The position of the rule
-  \R@shift=\A@left
+  \R@shift=\ebproof@left\ebproof@A
   \advance\R@shift\A@shift
-  \tmp=\B@left
+  \tmp=\ebproof@left\ebproof@B
   \advance\tmp\B@shift
   \ifdim\R@shift>\tmp
     \R@shift=\tmp
   \fi
   % The width of the rule
-  \R@width=\wd\A@box
+  \R@width=\wd\ebproof@A
   \advance\R@width\A@shift
-  \advance\R@width-\A@right
-  \tmp=\wd\B@box
+  \advance\R@width-\ebproof@right\ebproof@A
+  \tmp=\wd\ebproof@B
   \advance\tmp\B@shift
-  \advance\tmp-\B@right
+  \advance\tmp-\ebproof@right\ebproof@B
   \ifdim\tmp>\R@width
     \R@width=\tmp
   \fi
@@ -378,8 +389,8 @@ simple % use the 'simple' rule style by default
       \advance\tmp-\R@shift
       \advance\A@shift\tmp
       \advance\B@shift\tmp
-      \advance\C@left\tmp
-      \advance\C@axis\tmp
+      \advance\ebproof@left\ebproof@C\tmp
+      \advance\ebproof@axis\ebproof@C\tmp
       \advance\C@width\tmp
       \R@shift=0pt\relax
     \else
@@ -407,7 +418,7 @@ simple % use the 'simple' rule style by default
   \advance\tmp\R@shift
   \ifdim\tmp>\C@width
     \advance\tmp-\C@width
-    \advance\C@right\tmp
+    \advance\ebproof@right\ebproof@C\tmp
   \fi
   % Cancel the labels' height and depth
   \setbox\RC@box=\hbox{\raise\R@raise\box\RC@box}
@@ -415,21 +426,21 @@ simple % use the 'simple' rule style by default
   \dp\RC@box=\dp\R@box
   % Make the box
   \ifebproof@updown
-    \setbox\C@box=\vtop{%
-      \moveright\A@shift\box\A@box
+    \setbox\ebproof@C=\vtop{%
+      \moveright\A@shift\box\ebproof@A
       \hrule height 0pt
       \moveright\R@shift\box\RC@box%
       \hrule height 0pt
-      \moveright\B@shift\box\B@box}%
+      \moveright\B@shift\box\ebproof@B}%
   \else
-    \setbox\C@box=\vbox{%
-      \moveright\B@shift\box\B@box
+    \setbox\ebproof@C=\vbox{%
+      \moveright\B@shift\box\ebproof@B
       \hrule height 0pt
       \moveright\R@shift\box\RC@box%
       \hrule height 0pt
-      \moveright\A@shift\box\A@box}%
+      \moveright\A@shift\box\ebproof@A}%
   \fi
-  \ebproof@push{C}%
+  \ebproof@push\ebproof@C%
   \endgroup}
 
 %%% Modifying boxes
@@ -439,31 +450,31 @@ simple % use the 'simple' rule style by default
 
 \def\ebproof@alter#1{%
   \begingroup
-  \ebproof@pop{A}%
-  \setbox\A@box=\hbox{{#1\box\A@box}}%
-  \ebproof@push{A}%
+  \ebproof@pop\ebproof@A%
+  \setbox\ebproof@A=\hbox{{#1\box\ebproof@A}}%
+  \ebproof@push\ebproof@A%
   \endgroup}
 
 % Insert |\left| and |\right| delimiters without changing the alignment
 
 \def\ebproof@delims#1#2{%
   \begingroup
-  \ebproof@pop{TREE}%
+  \ebproof@pop\ebproof@A%
   \ebproof@localbox{@SHIFTED}%
-  \setbox\@SHIFTED=\hbox{$\vcenter{\copy\TREE@box}$}%
+  \setbox\@SHIFTED=\hbox{$\vcenter{\copy\ebproof@A}$}%
   \ebproof@localbox{@LEFT}%
   \setbox\@LEFT=\hbox{$#1\vrule height \ht\@SHIFTED depth \dp\@SHIFTED width 0pt\right.$}%
   \ebproof@localbox{@RIGHT}%
   \setbox\@RIGHT=\hbox{$\left.\vrule height \ht\@SHIFTED depth \dp\@SHIFTED width 0pt#2$}%
   \ebproof@localdimen{dy}
   \dy=\dp\@SHIFTED
-  \advance\dy-\dp\TREE@box
-  \ebproof@alloc{A}%
-  \setbox\A@box=\hbox{\raise\dy\hbox{\copy\@LEFT\box\@SHIFTED\copy\@RIGHT}}%
-  \A@left=\wd\@LEFT \advance\A@left\TREE@left
-  \A@right=\wd\@RIGHT \advance\A@right\TREE@right
-  \A@axis=\wd\@LEFT \advance\A@axis\TREE@axis
-  \ebproof@push{A}%
+  \advance\dy-\dp\ebproof@A
+  \ebproof@cleartree\ebproof@B%
+  \setbox\ebproof@B=\hbox{\raise\dy\hbox{\copy\@LEFT\box\@SHIFTED\copy\@RIGHT}}%
+  \ebproof@left\ebproof@B=\wd\@LEFT \advance\ebproof@left\ebproof@B\ebproof@left\ebproof@A
+  \ebproof@right\ebproof@B=\wd\@RIGHT \advance\ebproof@right\ebproof@B\ebproof@right\ebproof@A
+  \ebproof@axis\ebproof@B=\wd\@LEFT \advance\ebproof@axis\ebproof@B\ebproof@axis\ebproof@A
+  \ebproof@push\ebproof@B%
   \endgroup}
 
 %%% High-level commands
@@ -476,13 +487,15 @@ simple % use the 'simple' rule style by default
       \aftergroup\iftrue\@gobble\fi
       \else\aftergroup\iffalse\@gobble\fi\fi}%
   % The above code has produced \iftrue or \iffalse here.
-    \ebproof@pushsimple%
+    \ebproof@setsimple\ebproof@A
       {\def\inserttext{#1}\pgfkeysvalueof{/ebproof/template}}%
   \else
-    \ebproof@pushsplit
+    \ebproof@setsplit\ebproof@A
       {\def\inserttext{#1}\pgfkeysvalueof{/ebproof/left template}}%
       {\def\inserttext{#2}\pgfkeysvalueof{/ebproof/right template}}%
-  \fi}
+  \fi
+  \ebproof@push\ebproof@A
+}
 
 \newcommand\ebproof@hypo[2][]{%
   {\ebproofset{#1}\ebproof@hypo@parse#2&&\ebproof@hypo@stop}}
@@ -507,17 +520,18 @@ simple % use the 'simple' rule style by default
 
 \def\ebproof@ellipsis#1#2{{%
   \ebproofset{rule code=}%
-  \ebproof@pushsplit{}{%
+  \ebproof@setsplit\ebproof@A{}{%
     \setbox0=\vbox{\kern1.2ex\hbox{\ignorespaces#1}\hrule height 0pt\kern1.2ex}%
     \vbox to\ht0{\xleaders\vbox to .8ex{\vss\hbox{.}\vss}\vfill}%
     \rlap{ \box0}}%
+  \ebproof@push\ebproof@A
   \ebproof@joinv
   \ebproof@hypo{#2}%
   \ebproof@joinv}}
 
 %%% Environment interface
 
-\ebproof@clear
+\ebproof@clearstack
 
 \def\ebproof@begin{%
   \edef\ebproof@start@level{\the\ebproof@level}%
@@ -529,15 +543,15 @@ simple % use the 'simple' rule style by default
   \let\Delims=\ebproof@delims}
 \def\ebproof@end{%
   \egroup
-  \ebproof@pop{X}%
+  \ebproof@pop\ebproof@A%
   \ifnum\ebproof@level=\ebproof@start@level\else
     \PackageError{ebproof}{Malformed proof tree}{%
       Some hypotheses were declared but not used in this tree.}%
   \fi
   \ifebproof@center
-    \hbox{$\vcenter{\hbox{\box\X@box}}$}%
+    \hbox{$\vcenter{\hbox{\box\ebproof@A}}$}%
   \else
-    \box\X@box
+    \box\ebproof@A
   \fi
   \global\setbox\ebproof@box@temp=\box1}
 
